nextcloud/k8s/pod/mariadb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: nextcloud
spec:
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
      annotations:
        podinfo: "NextCloud用のMariadbのPod"
    spec:
      containers:
      # - image: turgon37/armhf-mariadb
      - image: mariadb:10.11.10
        imagePullPolicy: IfNotPresent
        name: mariadb
        ports:
        - containerPort: 3306
          name: mariadb
        resources:
          limits:
            cpu: 0.4
            memory: 600Mi
          requests:
            cpu: 0.2
            memory: 300Mi
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /var/lib/mysql
      nodeSelector:
        type: k8s-worker-2
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: nextcloud
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb
  # type: LoadBalancer
  type: ClusterIP
  # clusterIP: None
